# MTCNN

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/MTCNN/: FaceDetector.hpp
src/MTCNN/: FaceDetector.cpp
